tests/paczka1/fuzzy1/40011032.err
Error in line 12: LSU9C A 01 21,0
Error in line 18: LSU9C A701 76,09
Error in line 17: QWNrbU S704 31,8
Error in line 19: QWNrbU S290 59,7
Error in line 15: A956 S290 51,7
Error in line 27: I9VIwsG0 A701 85,2
Error in line 31: A956 S290 5,6
